Update alert message for database connection status

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             if(jobs.length > 0) {
                 alert(`Success! Loaded ${jobs.length} jobs from database!`);
             } else {
-                alert("Connected to database, but no jobs found yet.");
+                alert("Connected to database.");
             }
 
         } catch (error) {
